--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
