--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@types/axios": "^0.14.0",
+    "@types/mapbox-gl": "^3.4.0",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "yup": "^1.4.0"
   },
