admin side service progress

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.14.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
