--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.2",
+    "tailwindcss-animated": "^1.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
