--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@types/axios": "^0.14.0",
     "@types/mapbox-gl": "^3.4.0",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "flowbite": "^2.5.2",
+    "flowbite-datepicker": "^1.3.0",
     "formik": "^2.4.6",
     "mapbox-gl": "^3.7.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-map-gl": "^7.1.7",
