--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.10.0",
     "@types/axios": "^0.14.0",
     "@types/mapbox-gl": "^3.4.0",
     "@types/react-datepicker": "^7.0.0",
