--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animated": "^1.1.2",
     "yup": "^1.4.0"
   },
