--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/stripe-js": "^4.10.0",
     "@types/axios": "^0.14.0",
@@ -29,6 +30,7 @@
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.14.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
