--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
