--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,1 @@
-{
-  "build": {
-    "env": {
-      "NODE_OPTIONS": "--loader ts-node/esm"
-    }
-  }
-}
+{ "rewrites": [{ "source": "/(.*)", "destination":"/"}]}
